@@ -1,3 +1,10 @@
+Tue Oct 10 22:02:29 CEST 2006 Daniel Veillard <daniel@veillard.com>
+
+	* include/libxml/entities.h entities.c SAX2.c parser.c: trying to
+	  fix entities behaviour when using SAX, had to extend entities 
+	  content and hack on the entities processing code, but that should
+	  fix the long standing bug #159219
+
 Tue Oct 10 14:36:18 CEST 2006 Daniel Veillard <daniel@veillard.com>
 
 	* uri.c include/libxml/uri.h: add a new function xmlPathToUri()
